<resources>
    <string name="app_name">My Info 2</string>
    <string name="app_name_2">My Info 2</string>
    <string name="version">Version 1.0</string>
    <string name="assignment">\"Aplikasi untuk memenuhi Ujian Akhir Semester\"</string>
    <string name="title_profile">Profile</string>
    <string name="title_contact">Contact</string>
    <string name="title_friends">Friends</string>
    <string name="title_about">About</string>
    <string name="title_friend_detail">Friend Detail</string>
    <string name="_title_add_friend">Add Friend</string>
    <string name="application">Version</string>
    <string name="creator">Created By</string>
    <string name="my_name">Alexander M S</string>
    <string name="my_nim">10116370</string>
    <string name="my_class">IF - 8</string>
    <string name="major">Teknik Informatika</string>
    <string name="university">Universitas Komputer Indonesia</string>
    <string name="my_desc">Do. Or do not. There is no try. Just like Master Yoda said in my life there shall not be any doubt, life have to be determent. Determent to persevere in good and righteousness. I\'m an informatics student in UNIKOM and also part timer photographic designer in Barless Online Advertising.</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="my_number">+6285348060131</string>
    <string name="my_email">lexms@funderasia.com</string>
    <string name="my_ig">\@lexmanuel</string>
    <string name="my_twitter">\@lexms_</string>
    <string name="name">Name</string>
    <string name="nim">NIM</string>
    <string name="class_">Class</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Click button below if you don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="login_failed_msg">You have entered wrong username or password</string>
    <string name="sign_up_failed_msg">Username already taken</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_you_logged_in_as">Welcome, You logged in as :</string>
</resources>
