<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarContact"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="#FFFFFF"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_contact"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/toolbarText" />

        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgMyAva"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/toolbarContact"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/profilepicture"
            android:visibility="gone"
            app:civ_border_color="#00282828"
            app:civ_border_width="3dp" />

        <TextView
            android:id="@+id/tvMyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarContact"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/imgMyAva"
            android:text="@string/my_name"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMyName"
            android:layout_toEndOf="@id/imgMyAva"
            android:text="@string/my_nim"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgMyAva"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lytPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/toolbarText">

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgPhone"
                    android:text="@string/phone"
                    android:textColor="@color/colorMuted" />

                <TextView
                    android:id="@+id/tvMyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPhone"
                    android:layout_toEndOf="@id/imgPhone"
                    android:text="@string/my_number"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/toolbarText">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgEmail"
                    android:text="@string/email"
                    android:textColor="@color/colorMuted" />

                <TextView
                    android:id="@+id/tvMyEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEmail"
                    android:layout_toEndOf="@id/imgEmail"
                    android:text="@string/my_email"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytIg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/toolbarText">

                <TextView
                    android:id="@+id/tvIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgIg"
                    android:text="@string/instagram"
                    android:textColor="@color/colorMuted" />

                <TextView
                    android:id="@+id/tvMyIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvIg"
                    android:layout_toEndOf="@id/imgIg"
                    android:text="@string/my_ig"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@android:color/background_light"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/my_twitter"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_twitter"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tvTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgTwitter"
                    android:text="@string/twitter"
                    android:textColor="@android:color/background_light" />

                <TextView
                    android:id="@+id/tvMyTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTwitter"
                    android:layout_toEndOf="@id/imgTwitter"
                    android:text="@string/my_twitter"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>